refactor(project): 兼容jdk1.8