@@ -20,6 +20,7 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.core.env.Environment;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * CommonRequestFilter 自动配置（Service 模式）
@@ -65,7 +66,7 @@ public class FeignRequestFilterAutoConfiguration {
         CommonRequestFilter filter = new CommonRequestFilter(properties);
         filter.setEnvironment(environment);
         filter.setTokenCheckService(tokenCheckService);
-        List<RequestFilterWhiteListProvider> providers = whiteListProviderProvider.stream().toList();
+        List<RequestFilterWhiteListProvider> providers = whiteListProviderProvider.stream().collect(Collectors.toList());
         if (!providers.isEmpty()) {
             filter.setWhiteListProviders(providers);
         }
